--- a/index.css
+++ b/index.css
@@ -2,17 +2,24 @@
     box-sizing: border-box;
     padding: 0px 0px 5px 5px;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     color:#fff;
-    background-color: #000;
+    background-color: rgb(4, 2, 26);
     max-width:100% ;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
+    display: flex;
+    flex-direction: column;
 
 }
+
 /* header */
+
 #logo > h1{
     color: #20c997;
     display: flex;
@@ -70,14 +77,13 @@ a{
 .main{
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
     padding-top: 200px;
      gap: 30px;
-  
-  
+     width: 100%;
    
-   
-
 }
+
 .main > h1{
     display: flex;
     flex-direction: column;
@@ -107,23 +113,141 @@ a{
 .main > h3{
     font-size: 50px;
     font-family: poppins, sans-serif;
+    text-align:center ;
+    /*  */
+    white-space: inherit;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .5px solid orange; /* The typwriter cursor */
+
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .10em; /* Adjust as needed */
+    animation: 
+      typing 2.5s steps(40, end),
+      blink-caret .72s step-end infinite ;
+
 }
+/* The typing effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
 
 .about{
-    /* width: 100%; */
 position: relative;;
 display: flex;
 flex-direction: column;
-align-self: center
-;
-    top:400px;
+align-self: center;
+top:400px;
+
 }
+
 #watermark { 
 display: flex;
 flex-direction: row;
 
 }
+
 #watermark > h1{
 display: flex;
 margin: auto;
 }
+
+
+#about{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 3;
+    flex-wrap: wrap;
+    gap: 20px;
+    text-align: center;
+     border-bottom: 1px solid #20c997;
+     margin-bottom: 40px;
+   
+   
+   
+    
+}
+#about-me{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+#portfolio{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+}
+#img-el{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    
+
+}
+#portfolio > div > a >img{
+    width:90%;
+    border-radius: 5%;
+    border-bottom: 1px solid #20c997;
+}
+#text{
+   text-align: center;
+    text-transform: uppercase;
+    font-family:cursive ;
+    font-style:normal;
+    font-size: 25px;
+  background: -webkit-linear-gradient(#00ff95,#09009f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#port{
+    text-align: center;
+    text-transform: uppercase;
+    font-family:cursive ;
+    font-style:normal;
+    font-size: 25px;
+  background: -webkit-linear-gradient(#00ff95,#09009f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  margin-bottom: 40px;
+
+}
+#portfolio > div > a{
+    text-decoration: none;
+}
+#col{
+    background: -webkit-linear-gradient(#00ff95,#09009f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+:hover#img-el > a > img >h3{
+    color: #00ff95;
+}
+
+@media  screen and (max-width:500px) {
+    body{
+      display: flex;
+      width: 90%;
+    }
+      .main{
+  
+          display: flex;
+          flex-direction: column;
+          flex-wrap: nowrap;
+          padding-top: 200px;
+           gap: 30px;
+           width: 100%;
+      
+      }
+  }
+
