--- a/index.css
+++ b/index.css
@@ -33,10 +33,10 @@ header{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
     position: absolute;
     top: 30px;
     width:98%;
+    gap: 300px;
     
 
 
@@ -60,6 +60,8 @@ header{
     right: 100%;
 }
 #navigators{
+    /* margin: auto; */
+    margin-top: 0%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -328,6 +330,7 @@ footer{
     body{
       display: flex;
       width: 90%;
+      margin: auto;
     }
       .main{
   
@@ -340,6 +343,19 @@ footer{
            background: none;
       }   
       
-     
+      header{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        position: absolute;
+        top: 30px;
+        width:98%;
+        gap: 10px;
+        border-bottom:1px solid rgb(17, 13, 54);
+    }
+    :hover.navigators{
+        color:#20c997;
+    
+    }
   }
 
