--- a/index.css
+++ b/index.css
@@ -81,12 +81,12 @@ a{
     text-decoration: none;
     color: #fff;
 }
-:hover.navigators{
+/* :hover.navigators{
     color:#20c997;
     font-size: 40px;
     font-weight: bold;
 
-}
+} */
 :hover.icons{
     color:#20c997;
     width: 20px;
@@ -354,8 +354,17 @@ footer{
         border-bottom:1px solid rgb(17, 13, 54);
     }
     :hover.navigators{
-        color:#20c997;
+       nav-down: auto;
     
     }
+  }
+  @media screen and (min-width:600px) {
+    :hover.navigators{
+        color:#20c997;
+        font-size: 40px;
+        font-weight: bold;
+    
+    }
+    
   }
 
