--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    padding: 0px 0px 5px 5px;
+    padding: 0px 0px 0px 0px;
 }
 html{
     scroll-behavior: smooth;
@@ -10,9 +10,8 @@ body{
     background-color: rgb(4, 2, 26);
     max-width:100% ;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin: auto;
+    text-align: center;
     display: flex;
     flex-direction: column;
 
@@ -81,12 +80,7 @@ a{
     text-decoration: none;
     color: #fff;
 }
-/* :hover.navigators{
-    color:#20c997;
-    font-size: 40px;
-    font-weight: bold;
 
-} */
 :hover.icons{
     color:#20c997;
     width: 20px;
@@ -238,8 +232,8 @@ margin: auto;
 }
 .bi{
     background: -webkit-linear-gradient(#00ff95,#09009f);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     width: 20px;
     height: 50px;
     text-align: center;
@@ -250,12 +244,8 @@ margin: auto;
 #text{
    text-align: center;
     text-transform: uppercase;
-    font-family:cursive ;
-    font-style:normal;
+    font-family:monospace;
     font-size: 25px;
-  /* background: -webkit-linear-gradient(#00ff95,#09009f);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
 }
 
 #sub{
@@ -285,10 +275,13 @@ margin: auto;
     flex-direction: column;
     gap: 30px;
     margin-bottom: 100px;
+    
 }
 i{
     width: 100%;
-    margin-right: 10px;
+    /* margin-right: 10px; */
+   
+    
 }
 .space{
     margin-bottom: 30px;
@@ -305,7 +298,7 @@ i{
     margin: auto;
     font-weight: bold;
     text-align: center;
-    font-family:cursive ;
+    font-family:'Courier New', Courier, monospace ;
     font-style:normal;
 }
 #contact > #conxab > p{
@@ -353,7 +346,6 @@ footer{
     #port{
         text-align: center;
         text-transform: uppercase;
-        /* font-weight: bold; */
         font-size: 25px;
         margin-bottom: 40px;
     
@@ -369,8 +361,7 @@ footer{
     #port{
         text-align: center;
         text-transform: uppercase;
-        font-family:cursive ;
-        font-style:normal;
+        font-family:monospace;
         font-size: 25px;
         margin-bottom: 40px;
     
