--- a/index.css
+++ b/index.css
@@ -231,9 +231,9 @@ margin: auto;
     border-bottom: 1px solid #20c997;
 }
 .bi{
-    background: -webkit-linear-gradient(#00ff95,#09009f);
+    /* background: -webkit-linear-gradient(#00ff95,#09009f);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
     width: 20px;
     height: 50px;
     text-align: center;
